# rotary

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  build.zig  build.zig.zon
.github/workflows/: ci.yml
benches/: core.rs
docs/: ARCHITECTURE.md  COMPARISON.md  HOSTS.md  README.md  ROADMAP.md
piolium/: cargo-audit.json  cargo-audit.txt  cargo-deny-licenses.txt  cargo-deny.txt  code-review.md  final-audit-report.md  ponytail-audit.md  thermo-reaudit.md
piolium/attack-surface/: knowledge-base-report.md  sbom.json
plugins/: example.ts  package.json  shim.ts
src/: acp.rs  acp.zig  agent.rs  agent.zig  background_review.rs  compaction.rs  computer_use.rs  config.rs  config.zig  context.rs  context.zig  cost.rs  db.zig  dream_scheduler.rs  embeddings.rs  extract.rs  extract.zig  graph_memory.rs  guardrails.rs  guardrails.zig  hooks.rs  hooks.zig  http.rs  ipc.rs  ipc.zig  lib.rs  lsp.rs  lsp.zig  main.zig  marketplace.rs  mcp.rs  memory.rs  mode.rs  model_router.rs  models.rs  multiagent.rs  permissions.rs  permissions.zig  personality.rs  plugin.rs  (+25 more)
src/agent/: mod.rs  tool_types.rs
src/graph_memory/: dream.rs  extract.rs  graph.rs  mod.rs  scan.rs
src/pi/: extension.rs  extension_runtime.rs  mod.rs  policy.rs  rpc.rs  sdk.rs  session.rs  session_store_v2.rs  tools.rs
src/sandbox/: mod.rs  os.rs  userspace.rs
src/skill_engine/: engine.rs  mod.rs  registry.rs
src/tools/: common.rs  extended.rs  fs.rs  mod.rs
tests/: pi_conformance.rs
