[package]
name = "rx4"
version = "0.3.22"
edition = "2021"
rust-version = "1.88"
license = "MPL-2.0"
description = "The agent harness engine — loop, tools, providers, sessions, permissions, computer-use"
repository = "https://github.com/tschk/rotary"
homepage = "https://github.com/tschk/rotary"
keywords = ["agent", "harness", "llm", "mcp", "coding"]
categories = ["development-tools", "api-bindings", "asynchronous", "command-line-utilities"]

[[bin]]
name = "rx4"
path = "src/bin/rotary.rs"

[lib]
name = "rx4"
path = "src/lib.rs"

[features]
default = ["ipc", "builtin-tools"]
computer-use = ["dep:rs_peekaboo"]
# Agent loop always needs tokio (JoinSet / sleep). IPC adds net/process extras.
ipc = ["tokio/net", "tokio/io-util", "tokio/sync", "tokio/process", "tokio/rt-multi-thread", "dep:cancellation-token"]
providers = ["dep:reqwest", "dep:eventsource-stream", "dep:futures"]
builtin-tools = ["dep:rayon", "dep:glob", "dep:ignore", "dep:regex"]
memory = ["dep:rusqlite"]
mcp = ["tokio/process", "tokio/io-util", "tokio/sync", "dep:reqwest", "reqwest/json", "reqwest/rustls-tls", "dep:futures"]
sqlite-sessions = ["dep:rusqlite"]
graph-memory = []
skills = ["dep:serde_yaml", "dep:dirs"]

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
parking_lot = "0.12"
dashmap = "6"
moka = { version = "0.12", features = ["future"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
# Core async runtime for agent loop (always on).
tokio = { version = "1", features = ["rt", "time", "macros", "sync", "process"] }

# Optional — ipc
cancellation-token = { version = "0.1", optional = true }

# Optional — providers
reqwest = { version = "0.12", features = ["json", "stream", "blocking"], default-features = false, optional = true }
eventsource-stream = { version = "0.2", optional = true }
futures = { version = "0.3", optional = true }

# Optional — builtin-tools
rayon = { version = "1", optional = true }
glob = { version = "0.3", optional = true }
ignore = { version = "0.4", optional = true }
regex = { version = "1", optional = true }

# Optional — computer-use
rs_peekaboo = { version = "0.3.2", optional = true }

# Optional — memory / sqlite-sessions
rusqlite = { version = "0.37", features = ["bundled"], optional = true }

# Skill frontmatter parsing (skill_engine) and home-dir resolution.
serde_yaml = { version = "0.9", optional = true }
dirs = { version = "6", optional = true }

# Plugin integrity verification (marketplace).
sha2 = "0.10"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
